--- a/KmeansLab/LABandHW2.ipynb
+++ b/KmeansLab/LABandHW2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,22 +280,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Euc <function euclidean at 0x000001CACC7673A0>\n",
-      "Taxi <function cityblock at 0x000001CACC767820>\n"
+      "Euc <function euclidean at 0x00000189CE597310>\n",
+      "Taxi <function cityblock at 0x00000189CE597790>\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-7-3b01eae43995>:16: MatplotlibDeprecationWarning: Adding an axes using the same arguments as a previous axes currently reuses the earlier instance.  In a future version, a new instance will always be created and returned.  Meanwhile, this warning can be suppressed, and the future behavior ensured, by passing a unique label to each axes instance.\n",
+      "<ipython-input-5-3b01eae43995>:16: MatplotlibDeprecationWarning: Adding an axes using the same arguments as a previous axes currently reuses the earlier instance.  In a future version, a new instance will always be created and returned.  Meanwhile, this warning can be suppressed, and the future behavior ensured, by passing a unique label to each axes instance.\n",
       "  ax1 = figure.add_subplot(1,1,1)\n"
      ]
     },
@@ -303,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cheb <function chebyshev at 0x000001CACC767940>\n"
+      "Cheb <function chebyshev at 0x00000189CE5978B0>\n"
      ]
     },
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +465,7 @@
     "            if b>bst_one:\n",
     "                break\n",
     "            \n",
+    "            \n",
     "            for i in range(self.centr.shape[0]):\n",
     "                self.centr[i] = np.sum(zeros[:,i][:,np.newaxis]*self.data, axis = 0)/np.sum(zeros[:,i])\n",
     "                a.append(b)\n",
@@ -482,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +492,7 @@
        "(22500, 3)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,14 +505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-8-a0d4c27bcb5f>:24: RuntimeWarning: invalid value encountered in true_divide\n",
+      "<ipython-input-6-57c41c7b05a1>:25: RuntimeWarning: invalid value encountered in true_divide\n",
       "  self.centr[i] = np.sum(zeros[:,i][:,np.newaxis]*self.data, axis = 0)/np.sum(zeros[:,i])\n"
      ]
     }
